--- a/docs/pages/reference/machine-id/bound-keypair/concepts.mdx
+++ b/docs/pages/reference/machine-id/bound-keypair/concepts.mdx
@@ -111,7 +111,8 @@ values:
   This mode is the most flexible, as bots can rejoin repeatedly and can operate
   without mutable client-side state. However, this disables most additional
   security checks and should be used with care.
-  [See below](#disabling-join-state-verification) for more information.
+  [See the admin guide](admin-guide.mdx#disabling-join-state-verification) for
+  more information on using `insecure` mode in practice.
 
 ## Join state verification
 
