--- a/docs/pages/admin-guides/access-controls/guides/dual-authz.mdx
+++ b/docs/pages/admin-guides/access-controls/guides/dual-authz.mdx
@@ -21,9 +21,24 @@ The steps below describe how to use Teleport with Mattermost. You can also
 
 <Admonition type="warning">
 
-Dual Authorization requires Teleport Enterprise.
+Dual Authorization requires Teleport Identity Governance.
 
 </Admonition>
+
+## How it works
+
+Teleport administrators can configure a role that allows elevated privileges as
+long as multiple additional users approve a request for that role. When a user
+requests access to the elevated role, they create an Access Request resource on
+the Teleport Auth Service backend. 
+
+A Teleport Access Request plugin connects to the Teleport Auth Service and
+receives a gRPC message whenever a Teleport user creates or updates an Access
+Request. The plugin then manages updates in a third-party communication
+platform, in this case, Mattermost. Users can then approve and deny Access
+Requests by following a message link.
+
+![The Mattermost Access Request plugin](../../../../img/enterprise/plugins/mattermost/diagram.png)
 
 ## Prerequisites
 
