--- a/docs/pages/admin-guides/deploy-a-cluster/helm-deployments/aws.mdx
+++ b/docs/pages/admin-guides/deploy-a-cluster/helm-deployments/aws.mdx
@@ -17,6 +17,22 @@ cluster to Teleport.
 
 (!docs/pages/includes/cloud/call-to-action.mdx!)
 
+## How it works
+
+The `teleport-cluster` Helm chart deploys the Teleport Auth Service and Teleport
+Proxy Service on your Amazon Elastic Kubernetes Service cluster. The chart
+requires the following resources, which we show you how to create in this guide:
+
+- **IAM permissions for the Teleport Auth Service**. The Auth Service requires
+  permissions to manage resources on its backend. 
+- **A system to provision TLS credentials** that the Proxy Service uses to run
+  its HTTPS server. In this guide, we show you how to do this with
+  `cert-manager`, AWS Certificate Manager, and your own TLS credentials.
+  Depending on the method you choose, you may also need to create IAM
+  permissions to allow the provisioning system to interact with AWS APIs.
+- **Amazon S3 bucket and DynamoDB database** for the Teleport Auth Service
+  backend.
+
 ## Prerequisites
 
 (!docs/pages/includes/kubernetes-access/helm/teleport-cluster-prereqs.mdx!)
