--- a/docs/pages/upgrading/client-tools-autoupdate.mdx
+++ b/docs/pages/upgrading/client-tools-autoupdate.mdx
@@ -1,14 +1,14 @@
 ---
-title: Teleport Client Tool Automatic Updates
-description: Explains how to use Teleport client tools (`tsh` and `tctl`) auto-updates.
+title: Teleport Client Tool Managed Updates
+description: Explains how to use Teleport client tools (`tsh` and `tctl`) managed updates.
 labels:
  - conceptual
  - platform-wide
 ---
 
 This documentation explains how to keep Teleport client tools like `tsh` and `tctl` up-to-date.
-Updates can be automatic or self-managed, ensuring tools are secure, free from bugs,
-and compatible with your Teleport cluster. Available in versions: 17.0.1, 16.4.10, and 15.4.24.
+Updates can be managed by cluster or self-managed, ensuring tools are secure, free from bugs,
+and compatible with your Teleport cluster.
 
 Why keep client tools updated?
 
@@ -22,14 +22,15 @@ When you run `tsh login`, the tsh tool will check if updates are enabled for you
 If your client version differs from the cluster's required version, it will:
 
 1. Download the updated version.
-2. Store it in `~/.tsh/bin`.
+2. Store it in `~/.tsh/bin` (`$TELEPORT_HOME/bin`).
 3. Validate the binary with a checksum.
-4. Re-execute using the updated version (with the same environment variables).
+4. Records the client tools version advertised by the cluster in `~/.tsh/bin/.config.json`(`$TELEPORT_HOME/bin/.config.json`).
+5. Re-execute using the updated version (with the same environment variables).
 
 ### Key features
 
 **Binary Management**: Original binaries are preserved, and updates are stored separately.
-Updates are installed in the `$TELEPORT_HOME/.tsh/bin/` folder (if `TELEPORT_HOME` is not defined, the home folder is used).
+Updates are installed in the `$TELEPORT_HOME/bin` folder (if `TELEPORT_HOME` is not defined, the home folder is used `$HOME/.tsh/bin`).
 When client tools (`tctl` or `tsh`) are executed from any other path, they consistently check for binaries in the update
 folder and re-execute them if found.
 
@@ -43,6 +44,63 @@ The URL pattern is as follows:
 **Concurrency**: Tools use a locking mechanism to enable smooth operation during updates.
 Only one process can acquire the lock to update client tools, while other processes wait for the lock to be released.
 If the first process cancels the update, the next process in line will initiate the update.
+
+### Multi-cluster support and multi-version caching
+
+Client tools managed updates support multi-cluster environments. When you log in to different clusters that use
+different versions (including different major versions), the client makes a request to the `/v1/webapi/find` endpoint
+before executing the login command. This request retrieves the client tools version required by the target cluster.
+The specified version is then downloaded, extracted to the tools directory, and used to re-execute the command.
+As a result, the login command runs using the version required by that cluster.
+
+The required version for each cluster is tracked in `$TELEPORT_HOME/bin/.config.json` (defaults to `~/.tsh/bin/.config.json`).
+This file stores the proxy address, the required version for each cluster, and the update mode.
+If managed updates are disabled for a cluster (i.e., the mode is set to "disable"), re-execution
+is skipped and the currently installed version is used instead.
+
+Example of managed updates configuration file:
+```json
+{
+  "version": "v1",
+  "configs": {
+    "proxy1.example.com": {"version": "18.1.0","disabled": false},
+    "proxy2.example.com": {"version": "17.5.5","disabled": false},
+    "proxy3.example.com": {"version": "16.5.5","disabled": false},
+    "proxy4.example.com": {"version": "16.5.5","disabled": true}
+  }
+}
+```
+
+By default, client tools managed updates store up to three different versions in the `$TELEPORT_HOME/bin` directory.
+If multiple clusters require the same version, a single shared copy is used. Once the update process is complete,
+the relative path to the client tools is recorded in the configuration file.
+
+```json
+{
+  "version": "v1",
+  "configs": {
+    "proxy1.example.com": {"version": "18.1.0","disabled": false}
+  },
+  "tools": [
+    {
+      "version": "18.1.0",
+      "path": {
+        "tctl": "1921b970-807f-4d36-a769-fbda149d8970-update-pkg-v2/tctl-18.1.0.pkg/Payload/tctl.app/Contents/MacOS/tctl",
+        "tsh": "1921b970-807f-4d36-a769-fbda149d8970-update-pkg-v2/tsh-18.1.0.pkg/Payload/tsh.app/Contents/MacOS/tsh"
+      }
+    }
+  ],
+  "max_tools": 3
+}
+```
+
+After each `tctl` or `tsh` command is re-executed using a specific version from the tools list,
+the list is reordered to move the most recently used version to the top. If the number of cached
+versions exceeds the allowed limit, the least recently used version (at the bottom of the list)
+will be removed during the next update.
+
+To reduce the need for repeated downloads, you can increase the number of stored versions by
+manually setting the max_tools value to the desired limit.
 
 ## Configuring client tool automatic updates
 
@@ -59,9 +117,38 @@ only version environment variable will be overridden to `TELEPORT_TOOLS_VERSION=
 
 Example of self-managed auto-update by setting the version with environment variable:
 ```bash
-$ TELEPORT_TOOLS_VERSION=17.0.5 tctl version
+$ TELEPORT_TOOLS_VERSION=18.1.0 tctl version
 Update progress: [▒▒▒▒▒▒▒▒▒▒] (Ctrl-C to cancel update)
-Teleport v17.0.5 git:v17.0.5-0-g7cc4c2a go1.23.4
+Teleport v18.1.0 git:v18.1.0-0-g8cdb161 go1.24.5
+
+# If the environment variable is not set, the currently installed version is used.
+$ tctl version
+Teleport v17.6.0 git:v17.6.0-0-g4c3b13b go1.23.11
+````
+
+To use the version specified by the environment variable, it must always be set.
+If the variable is set during the login command, we prioritize this version over the one
+provided by the cluster configuration. Even if the cluster indicates that client tools
+managed updates are disabled, setting the environment variable will force them to be enabled.
+Any tsh or tctl command executed with an active profile for this cluster will be re-executed
+using the recorded version.
+
+```bash
+$ TELEPORT_TOOLS_VERSION=18.1.0 tsh login --proxy proxy.example.com
+Update progress: [▒▒▒▒▒▒▒▒▒▒] (Ctrl-C to cancel update)
+...
+
+# The session is still active, and the profile at ~/.tsh/current-profile is set to proxy.example.com.
+$ tctl version
+Teleport v18.1.0 git:v18.1.0-0-g8cdb161 go1.24.5
+
+$ cat ~/.tsh/bin/.config.json
+{
+  "version": "v1",
+  "configs": {
+    "proxy.example.com": {"version": "18.1.0","disabled": false}
+  }
+}
 ````
 
 ### Using `tctl`
