docs(mcp): code review suggestions

--- a/docs/pages/connect-your-client/model-context-protocol/mcp-access.mdx
+++ b/docs/pages/connect-your-client/model-context-protocol/mcp-access.mdx
@@ -8,7 +8,7 @@ Teleport.
 
 ### Prerequisites
 
-(!docs/pages/includes/edition-prereqs-tabs.mdx!)
+(!docs/pages/includes/edition-prereqs-tabs.mdx edition="Teleport (v18.1.0 or higher)" clients="\`tsh\` client"!)
 
 - Teleport MCP Access configured.
 
@@ -16,9 +16,7 @@ Teleport.
   <summary>Configure MCP Access</summary>
 
   - [Quick-start with demo MCP server](../../enroll-resources/mcp-access/getting-started.mdx).
-
   - [MCP Access with Stdio MCP Server](../../enroll-resources/mcp-access/stdio.mdx)
-
   </details>
   
 ### Step 1/2. Installation
