--- a/docs/pages/enroll-resources/mcp-access/stdio.mdx
+++ b/docs/pages/enroll-resources/mcp-access/stdio.mdx
@@ -27,7 +27,7 @@ providing visibility into user activity.
 
 ## Prerequisites
 
-(!docs/pages/includes/edition-prereqs-tabs.mdx!)
+(!docs/pages/includes/edition-prereqs-tabs.mdx edition="Teleport (v18.1.0 or higher)"!)
 - A host, e.g., an EC2 instance, where you will run the Teleport Applications
   Service.
 - Tools on the same host that can launch stdio-based MCP servers like `npx`
