--- a/docs/pages/connect-your-client/model-context-protocol/database-access.mdx
+++ b/docs/pages/connect-your-client/model-context-protocol/database-access.mdx
@@ -7,7 +7,7 @@ This guide explains how to connect to your **PostgreSQL** Teleport databases wit
 
 ### Prerequisites
 
-(!docs/pages/includes/edition-prereqs-tabs.mdx!)
+(!docs/pages/includes/edition-prereqs-tabs.mdx clients="\`tsh\` client"!)
 
 - Teleport Database Service with a PostgreSQL database enrolled. See our [guides](../../enroll-resources/database-access/database-access.mdx)
   for options on how to set up Database Access for PostgreSQL databases, such as
@@ -86,7 +86,7 @@ You may need to restart your client to reload these new configurations.
 
 You can also provide a custom path for your Claude Desktop MCPs configuration:
 ```code
-$ tsh mcp db config --db-user=postgres --db-name=employees --config-client=/path/to/config.json postgres-dev
+$ tsh mcp db config --db-user=postgres --db-name=employees --client-config=/path/to/config.json postgres-dev
 ```
 
 After updating the configuration, you need to restart the Claude Desktop app
