--- a/docs/pages/faq.mdx
+++ b/docs/pages/faq.mdx
@@ -11,6 +11,8 @@ This page includes answers to frequently asked questions about setting up,
 managing, and using Teleport. If you are new to Teleport, read our [Getting
 Started Guide](get-started.mdx).
 
+test
+
 ## Can I use Teleport in production today?
 
 Teleport has been deployed on server clusters with thousands of hosts at
